Changed toList() to be java 15 compliant